# project_back

./: .env  Cargo.toml  README.md
migrations/: 20230923121021_create_authorized_user_table.sql  20230923131024_create_channel_table.sql  20230926095216_create_user_table.sql  20230926095827_create_channel_table.sql  20230926100145_create_message_table.sql  20230926100928_get_user_channels.sql  20230926114250_get_user_channels.sql  20230926115452_get_messages_by_channel.sql  20231008191245_alter_chanels_table_add_creator_id.sql  20231017000928_get_user_channels_function.sql  20231028193457_get_channels_func.sql  20231210145357_add_column_icon.sql  20231210145423_add_column_background.sql  20231219123543_search_channels.sql  20231219124719_search_users.sql  20231219154232_get_channels_v2.sql  20231220122836_show_channel_data.sql
src/: main.rs  routes.rs  stream.rs
src/handlers/: mod.rs
src/handlers/auth/: log_in.rs  log_out.rs  mod.rs  register.rs
src/handlers/chat/: create_channel.rs  create_message.rs  get_messages.rs  join_channel.rs  mod.rs  out_channel.rs  show_channels.rs
src/handlers/profile/: get_me.rs  mod.rs  update_me.rs
src/handlers/search/: mod.rs  search_channels.rs  search_users.rs
src/handlers/ws/: mod.rs  start_connection.rs
src/models/: broadcast.rs  message.rs  mod.rs  user.rs
src/models/auth/: user.rs
src/models/chat/: channel.rs  message.rs  mod.rs  user.rs
src/models/websockets/: connection.rs  lobby.rs  messages.rs  mod.rs  ws.rs
src/utils/: cookie_checker.rs  encrypt.rs  mod.rs  password_hashing.rs
