[package]
name = "project_back"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-rt = "2.8.0"
env_logger = "0.10.0"
dotenvy = "0.15"
serde = {version="1.0.106", features=["derive"]}
uuid = { version = "1.3.2", features = ["serde", "v4"] }
sqlx = { version="0.7.1", features = ["runtime-tokio", "postgres", "macros", "uuid", "chrono"]}

#sse
actix-web-lab = "0.18.5"
parking_lot = "0.12.1"
futures-util = { version = "0.3.25", default-features = false, features = ["std"] }

#password hashing crate
argon2 = "0.5.0"

# CORS 
actix-cors = "0.6.4"

# TIMESTAMP 
chrono = { version = "0.4.11", features = ["serde"] }

# Cookie
actix-identity = "0.4.0"

